Test/Sema/Bad/bad_return_missing.py.err
CHECK: bad_return_missing.py:3:1: error: All paths in this function/method must have a return statement: foo
CHECK-NEXT: def foo() -> int:
CHECK: 1 error generated!
